fixed alignment of project

--- a/style2.css
+++ b/style2.css
@@ -28,12 +28,12 @@ width:40%;
 top:0;
 left:0;
 z-index: 10;
-margin-left: 20px;
-margin-right: 20px;
+margin-left: 2.5vw;
+/* margin-right: 20px; */
 /* width: 95vw; */
 /*     border-bottom: 1px solid #aaaaaa; */
     height:35px;
-    /* background-color: #ffffff; */
+    /* background-color:yellow; */
     display: flex;
 align-items: center;
 justify-content: center;
@@ -52,7 +52,7 @@ flex-wrap: nowrap; */
 .work{
   background-blend-mode: difference;
   text-align: center;
-  width:100px;
+  /* width:100px; */
   margin-top:7px;
   cursor: pointer;
   /* background-color: yellow; */
@@ -69,6 +69,7 @@ flex-wrap: nowrap; */
 }
 .name2 a:hover,
 .work a:hover{
+    text-decoration:underline;
   color:#333;
 }
 .name2{
@@ -242,7 +243,9 @@ font-size: 21px;
 }
 
 @media (max-width: 850px) {
-
+.bar{
+  /* margin-left: 10px; */
+}
   .text{
       width:100%;
   }
